--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,54 @@
 .container {
 
   /* debug */
-  height: 500px;
-  background: red;
   margin:auto;
+  /* fine debug */
+}
+
+.center {
+
+  width: 70%;
+  margin:auto;
+
+}
+
+/* regole header */
+
+.nav {
+  /* debug */
+  height: 142px;
+  margin:auto;
+  background: red;
+  /* fine debug */
+}
+
+.toolbar.center {
+
+  height: 70px;
+  background: green
+}
+
+/* regole main */
+
+/* jumbotron */
+#jumbotron {
+
+ width: 100%;
+}
+
+#jumbosection {
+  position: relative;
+}
+
+.jumbotext{
+
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate( -50%, -50% );
+  /* debug */
+  height: 400px;
+  background: blue;
+  opacity: 0.1;
   /* fine debug */
 }
