--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,13 @@
 
 }
 
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+
+}
+
 /* regole header */
 
 .nav {
@@ -57,6 +64,57 @@
   /* debug */
   height: 400px;
   background: blue;
-  opacity: 0.1;
+  opacity: 0.2;
   /* fine debug */
+}
+
+/* fine jumbotron */
+
+/* inizio main */
+
+/* inizio columns section */
+
+.cubelogo {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+/* hat section */
+
+.hat {
+  margin-top: 50px;
+  /* debug */
+  height: 300px;
+  background: yellow;
+  opacity: 0.2;
+  /* fine debug */
+
+}
+
+/* columns */
+
+.columns {
+
+  margin-top: 20px;
+  margin-bottom: 20px;
+  /* debug */
+  height: 600px;
+  background: green;
+  opacity: 1;
+  /* fine debug */
+}
+
+.boxes {
+  float:left;
+  width: 30%;
+    /* debug */
+  height:600px;
+  background: purple;
+  opacity: 0.5;
+  /* fine debug */
+}
+
+#specialbox {
+  margin:0 5%;
 }
