--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@
   margin-top: 20px;
   margin-bottom: 20px;
   /* debug */
-  height: 600px;
+  height: 400px;
   background: green;
   opacity: 1;
   /* fine debug */
@@ -109,7 +109,7 @@
   float:left;
   width: 30%;
     /* debug */
-  height:600px;
+  height:400px;
   background: purple;
   opacity: 0.5;
   /* fine debug */
@@ -148,3 +148,78 @@
   opacity: 0.4;
   /* fine debug */
 }
+
+/* fine grid section */
+
+/* inizio prefooter section */
+
+.prefooterlogo {
+
+  /* debug */
+  height:300px;
+  background: red;
+  opacity: 0.3;
+  /* fine debug */
+}
+
+.prefooterimg {
+
+ /* debug */
+ height:500px;
+ background: black;
+ opacity: 0.3;
+}
+
+/* fine prefooter section */
+
+/* inizio footer */
+
+.creditbox {
+  float:left;
+  width: 20%;
+  margin:2%;
+    /* debug */
+  height:300px;
+  background: yellow;
+  opacity: 0.5;
+  /* fine debug */
+
+}
+
+.credits {
+
+  /* debug */
+  height:500px;
+  background:blue;
+  opacity: 0.5;
+  /* fine debug */
+
+}
+
+.contacts {
+
+  /* debug */
+  /* height:400px; */
+  background:black;
+  opacity: 0.5;
+  /* fine debug */
+}
+
+.lenguages {
+
+  /* debug */
+  height: 48px;
+  background: red;
+  opacity: 0.3;
+  /* fine debug */
+}
+.copyright {
+
+  /* debug */
+  height: 100px;
+  background: yellow;
+  opacity: 0.3;
+  /* fine debug */
+}
+
+/* fine footer */
