--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@
   height: 100%;
   float: left;
   margin-right: 30px;
+  font-size: 13px;
 
 }
 
@@ -81,7 +82,7 @@
 /* right side */
 
 .button {
-
+  font-size: 13px;
   line-height: 70px;
   margin-left: 40px;
   color:white;
@@ -116,6 +117,33 @@
   color:blue;
 }
 
+/* toolbar inferiore */
+
+/* left side */
+
+.left.clearfix > img {
+
+ position: absolute;
+ left:0;
+ top:50%;
+ transform: translate( 0 , -50%);
+}
+
+/* right side */
+
+.right.clearfix span {
+
+  float:right;
+  line-height: 70px;
+  margin-left: 40px;
+
+}
+
+.right.clearfix a {
+
+  text-decoration: none;
+  color: #32495b;
+}
 
 /* regole main */
 
