--- a/css/style.css
+++ b/css/style.css
@@ -163,12 +163,49 @@
   top:50%;
   left:50%;
   transform: translate( -50%, -50% );
-  /* debug */
-  height: 400px;
-  background: blue;
-  opacity: 0.2;
-  /* fine debug */
+  top:220px;
+
 }
+
+.textjumbo {
+  margin-top: 150px;
+  height: 100%;
+  width: 60%;
+  color:#32495b;
+}
+
+.textjumbo h1 {
+
+  font-size: 45px;
+  margin-bottom: 30px;
+
+}
+
+.buttonjumbo {
+  position:relative;
+}
+
+.textjumbo a  {
+
+  text-decoration: none;
+  color:white;
+  cursor:pointer;
+  border: 1px solid #ff7a59;
+  padding: 20px;
+  border-radius: .1875rem;
+  background: #ff7a59;
+
+ }
+
+ .jumboitem {
+   position: relative;
+   margin-bottom: 60px;
+ }
+
+ .jumboitem p {
+
+   line-height: 30px;
+ }
 
 /* fine jumbotron */
 
