--- a/css/style.css
+++ b/css/style.css
@@ -550,11 +550,9 @@ border-bottom: 0;
 
 .prefooterlogo {
 
-  /* debug */
-  height:300px;
-  background: red;
-  opacity: 0.3;
-  /* fine debug */
+  min-height:300px;
+  padding-top: 50px;
+
 }
 
 .prefooterimg {
@@ -564,6 +562,73 @@ border-bottom: 0;
  background: black;
  opacity: 0.3;
 }
+
+/* prefooterlogo left */
+
+.prefooterlogo-left {
+
+  float:left;
+  height: 100%;
+  width: 40%;
+  text-align:left;
+  padding-left: 100px;
+  margin-top: 20px;
+
+}
+
+.prefooterlogo-left h1 {
+
+font-size: 60px;
+
+}
+
+.prefooterlogo-left p {
+
+  /* text-align: center; */
+  font-size: 15px;
+  text-align: justify;
+  margin-top: 20px;
+  line-height: 30px;
+  margin-left: 10px;
+}
+
+/* prefooterlogo right */
+
+.prefooterlogo-right {
+
+  float:left;
+  min-height: 200px;
+  width: 60%;
+  /* debug */
+  /* background: blue;
+  opacity: 0.2; */
+  /* fine debug */
+}
+
+.prefootersponsor {
+
+  position: relative;
+  float:left;
+  text-align: center;
+  width: 25%;
+  min-height: 100px;
+
+}
+
+.prefootersponsor img {
+
+  position: absolute;
+  left:0;
+  top:50%;
+  transform: translate( 0 , -50%);
+  max-width: 100%;
+  max-height: 100%;
+  padding: 10px;
+}
+
+
+
+
 
 /* fine prefooter section */
 
