--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,19 @@ footer {
   background: #2d3e50;
 
 }
+
+.bgcolor-nav {
+
+ background: #f0f4f7;
+
+}
+
+.bgcolor-section {
+
+ background:#fff;
+
+}
+
 .nav {
 
   overflow: hidden;
@@ -25,13 +38,13 @@ footer {
   top: 0;
   width: 100%;
   z-index: 1;
-  background: #f5f8fa;
+  background: #fff;
 
 }
 
 .container {
 
- background-color: #f5f8fa;
+ background-color: #f0f4f7;
 
 }
 
@@ -43,6 +56,7 @@ footer {
 }
 
 .clearfix::after {
+
   content: "";
   display: table;
   clear: both;
@@ -91,6 +105,7 @@ footer {
 
     padding: 1px 25px 1px 0;
     border-right: 1px solid black;
+
 }
 
 .menutoolbar a,.menutoolbar i {
@@ -99,6 +114,25 @@ footer {
   color:#32495b;
   line-height: 70px;
   cursor:pointer;
+
+}
+
+input[type=text] {
+
+  width: 70px;
+  -webkit-transition: 1s ease-in-out;
+  transition: 1s ease-in-out;
+  margin-right: 20px;
+}
+
+input[type=text]:focus {
+
+  width: 80%;
+}
+
+.menutoolbar strong:hover {
+
+opacity: 0.5;
 
 }
 
@@ -176,6 +210,12 @@ footer {
 
 }
 
+.right.clearfix a:hover {
+
+opacity: 0.5;
+
+}
+
 /* regole main */
 
 /* jumbotron */
@@ -190,8 +230,22 @@ footer {
 
 }
 
+.jumboitem strong {
+
+color:#F3EFEF;
+
+}
+
+.jumboitem strong:hover {
+
+color:white;
+
+}
+
 .jumbotext{
 
+  width: 70%;
+  margin:auto;
   position: absolute;
   top:50%;
   left:50%;
@@ -203,9 +257,8 @@ footer {
 .textjumbo {
 
   margin-top: 150px;
-  height: 100%;
-  width: 60%;
   color:#32495b;
+
 }
 
 .textjumbo h1 {
@@ -235,7 +288,6 @@ footer {
 
  .jumboitem {
 
-   position: relative;
    margin-bottom: 60px;
 
  }
@@ -265,6 +317,8 @@ footer {
   margin-top: 80px;
   margin-bottom: 20px;
   text-align: center;
+  color:#2d3e50;
+
 
 }
 
@@ -307,6 +361,7 @@ footer {
   height: 100%;
   width: 33%;
   text-align: center;
+  color:#2d3e50;
 
 }
 
@@ -323,7 +378,7 @@ footer {
 
   margin-left: 20px;
   text-decoration: none;
-  color:white;
+  color:#F3EFEF;
   cursor:pointer;
   border: 1px solid #ff7a59;
   padding: 20px 40px 20px 40px;
@@ -331,6 +386,12 @@ footer {
   background: #ff7a59;
 
  }
+
+.crm-button strong:hover {
+
+color:white;
+
+}
 
   /* right hat */
 .rhat {
@@ -340,6 +401,7 @@ footer {
   height: 100%;
   width: 67%;
   margin-top: 30px;
+  color:#2d3e50;
 
 }
 
@@ -373,15 +435,8 @@ footer {
 
 }
 
-.rthat span {
-
-  margin-right: 20px;
-
-}
-
 .rhat i {
 
-  margin-left: 20px;
   color:#ff7a59;
 
 }
@@ -400,8 +455,11 @@ footer {
   float:left;
   width: 30%;
   background: white;
-  box-shadow:0 1px 4px rgba(173,216,230 , 0.2), 0 0 40px rgba(173,216,230 ,0.3)
-  inset;
+  box-shadow:0 1px 4px rgba(173,216,230 , 0.2), 0 0 40px rgba(173,216,230 ,0.3)inset;
+  min-width: 30%;
+  padding: 20px;
+  color:#2d3e50;
+
 
 }
 
@@ -412,22 +470,22 @@ footer {
 
 }
 
-
 /* parte superiore columns  */
 
 .boxes-img  {
 
-height: 60%;
-text-align: center;
-margin:auto;
+ text-align: center;
 
 }
+
+
 
 .boxes-img img{
 
   max-width: 100px;
   max-height: 100px;
   min-height: 100px;
+  min-width: 100px;
   margin-top: 10px;
 
 }
@@ -443,9 +501,7 @@ margin:auto;
 
 .boxes-item {
 
-  height: 40%;
-  margin:30px;
-  margin-bottom: 50px;
+  margin: 30px 0px 30px 0px;
   text-align: center;
   border-top: 1px solid #32495b;
 
@@ -475,7 +531,7 @@ color:#ff7a59;
 
   margin-top: 30px;
   text-decoration: none;
-  color:white;
+  color:#F3EFEF;
   cursor:pointer;
   border: 1px solid #ff7a59;
   padding: 20px 40px 20px 40px;
@@ -483,6 +539,14 @@ color:#ff7a59;
   background: #ff7a59;
 
  }
+
+.crm-button-boxes a:hover {
+
+ color:white;
+
+}
+
+
 
 /* fine columns */
 
@@ -493,6 +557,7 @@ color:#ff7a59;
   background-image: linear-gradient(45deg, #00a4bd, #00bda5);
   padding-bottom: 100px;
   padding-top: 100px;
+  margin-top: 50px;
 
 }
 
@@ -513,20 +578,13 @@ color:#ff7a59;
 
 }
 
-.grid {
-
-  min-height: 400px;
-  padding-bottom: 50px;
-
-}
-
 /* parte inferiore grid */
 
 .gridbox {
 
   float:left;
   width: 25%;
-  height: 200px;
+  min-height: 200px;
   padding:30px;
   border-bottom: 1px solid white;
   border-right: 1px solid white;
@@ -536,8 +594,6 @@ color:#ff7a59;
 .gridboxup  {
 
   text-align: center;
-  width: 100%;
-  min-height: 50%;
 
 }
 
@@ -545,8 +601,7 @@ color:#ff7a59;
 
   position: relative;
   text-align: center;
-  width: 100%;
-  min-height: 50%;
+  margin-top: 20px;
 
 }
 
@@ -608,7 +663,7 @@ border-bottom: 0;
 
 .prefooterimg {
 
- height:500px;
+ height: 500px;
 
 }
 
@@ -617,9 +672,7 @@ border-bottom: 0;
 .prefooterlogo-left {
 
   float:left;
-  height: 100%;
   width: 40%;
-  text-align:left;
   padding-left: 100px;
   margin-top: 20px;
 
@@ -627,17 +680,17 @@ border-bottom: 0;
 
 .prefooterlogo-left h1 {
 
-font-size: 60px;
+ font-size: 60px;
+ color:#2d3e50;
 
 }
 
 .prefooterlogo-left p {
 
-  font-size: 15px;
-  text-align: justify;
   margin-top: 20px;
   line-height: 30px;
   margin-left: 10px;
+  color:#2d3e50;
 
 }
 
@@ -646,47 +699,43 @@ font-size: 60px;
 .prefooterlogo-right {
 
   float:left;
-  min-height: 200px;
   width: 60%;
+  margin-top: 50px;
 
 }
 
 .prefootersponsor {
 
-  position: relative;
   float:left;
   text-align: center;
   width: 25%;
-  min-height: 100px;
 
 }
 
 .prefootersponsor img {
 
-  position: absolute;
   left:0;
   top:50%;
   transform: translate( 0 , -50%);
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 150px;
+  max-height: 70px;
   padding: 10px;
 
 }
 
 /* prefooterimg left */
 
+/*
 .prefooterimg {
 
   position: relative;
 
-}
+} */
 
 .prefooterimg-text {
 
   float:left;
-  height: 100%;
   width: 50%;
-  padding-left: 20px;
 
 }
 
@@ -701,19 +750,21 @@ margin-bottom: 50px;
 
   font-size: 35px;
   margin-top:30px;
+  color:#2d3e50;
 
 }
 
 .prefooterimg-item p {
 
   font-size:15px;
+  color:#2d3e50;
 
 }
 
 .prefooterimg-item a {
 
   text-decoration: none;
-  color:white;
+  color:#F3EFEF;
   cursor:pointer;
   border: 1px solid #ff7a59;
   padding:20px;
@@ -722,11 +773,16 @@ margin-bottom: 50px;
 
 }
 
+.prefooterimg-item a:hover {
+
+color:white;
+
+}
+
 /* prefooterimg right */
 
 .prefooterimg-logo {
 
-  position: relative;
   float:left;
   height: 100%;
   width: 50%;
@@ -735,13 +791,8 @@ margin-bottom: 50px;
 
 .prefooterimg-logo img {
 
-  position: absolute;
-  right:0;
-  top:50%;
-  transform: translate( 0 , -50%);
-  max-width: 90%;
-  max-height: 90%;
-  padding-bottom: 100px;
+   float:right;
+   max-height: 80%;
 
 }
 
@@ -755,14 +806,12 @@ margin-bottom: 50px;
   float:left;
   width: 20%;
   margin:2%;
-  height:300px;
 
 }
 
 .credits {
- text-align: left;
- color:white;
-  height:500px;
+
+ min-height:500px;
 
 }
 
@@ -791,6 +840,12 @@ margin-bottom: 50px;
 
 }
 
+.creditbox a:hover {
+
+color:white;
+
+}
+
 #contactbutton {
 
     text-decoration: none;
@@ -801,6 +856,12 @@ margin-bottom: 50px;
     border-radius: .1875rem;
     background: lightgrey;
     font-size: 14px;
+
+}
+
+#contactbutton:hover {
+
+color:white;
 
 }
 
@@ -820,7 +881,13 @@ margin-bottom: 50px;
 
 .icons a {
 
-  color:white;
+  color:lightblue;
+
+}
+
+.icons i:hover {
+
+color:white;
 
 }
 
@@ -828,7 +895,7 @@ margin-bottom: 50px;
 
 .lenguages {
 
-  height: 48px;
+  min-height: 48px;
   background: #2d3e50;
 
 }
@@ -836,7 +903,6 @@ margin-bottom: 50px;
 .lenguages-center {
 
   width: 50%;
-  height: 100%;
   margin:auto;
 
 }
@@ -854,7 +920,20 @@ text-decoration: none;
 
 }
 
+.lenguages-center span:hover {
+
+color:white;
+
+}
+
 /* copyright */
+
+.copyright {
+
+  background: #2d3e50;
+  min-height: 150px;
+
+}
 
 /* copyright left */
 
@@ -862,7 +941,6 @@ text-decoration: none;
 
   float:left;
   width: 50%;
-  height: 100%;
   padding-top: 35px;
 
 }
@@ -879,7 +957,6 @@ text-decoration: none;
 
   float:left;
   width: 50%;
-  height: 100%;
 
 }
 
@@ -893,10 +970,9 @@ color:lightblue;
 
 }
 
-.copyright {
+.copyright-right h3:hover {
 
-  background: #2d3e50;
-  height: 150px;
+color:white;
 
 }
 
