--- a/css/style.css
+++ b/css/style.css
@@ -370,7 +370,8 @@ color:white;
 .hat:hover {
 
 transform: scale(1.07);
-transition: transform .5s;
+box-shadow:0 1px 4px rgba(173,216,230 , 0.8), 0 0 40px rgba(173,216,230 ,0.8)
+
 
 }
 
@@ -481,11 +482,12 @@ color:white;
   color:#2d3e50;
   transition: transform .5s;
 
-}
+} 
 
 .boxes:hover {
 
 transform: scale(1.07);
+box-shadow:0 1px 4px rgba(173,216,230 , 0.8), 0 0 40px rgba(173,216,230 ,0.8)inset;
 
 }
 
