--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,16 @@ footer {
   float:left;
   position: relative;
   height: 100%;
-  width: 50%;
+  width: 30%;
+
+}
+
+.right.clearfix {
+
+  float:left;
+  position: relative;
+  height: 100%;
+  width: 70%;
 
 }
 
@@ -101,11 +110,15 @@ footer {
 
 }
 
-#linkborder {
+.fas.fa-chevron-down {
 
-    padding: 1px 25px 1px 0;
-    border-right: 1px solid black;
+  margin-left: 10px;
+}
 
+.verbar {
+
+  font-size: 20px;
+  margin-left: 20px;
 }
 
 .menutoolbar a,.menutoolbar i {
@@ -127,7 +140,7 @@ input[type=text] {
 
 input[type=text]:focus {
 
-  width: 80%;
+  width: 70%;
 }
 
 .menutoolbar strong:hover {
@@ -211,7 +224,7 @@ transition: 0.8s ease-in-out;
 
   float:right;
   line-height: 70px;
-  margin-left: 40px;
+  margin-left: 30px;
 
 }
 
@@ -226,6 +239,20 @@ transition: 0.8s ease-in-out;
 
 opacity: 0.5;
 
+}
+
+.right.clearfix img {
+
+  min-width: 50px;
+  min-height: 50px;
+  max-width: 50px;
+  max-height: 50px;
+
+}
+
+.right.clearfix i {
+
+  margin-left: 10px;
 }
 
 /* regole main */
@@ -360,17 +387,18 @@ color:white;
 
   margin-top: 50px;
   background-color: white;
-  box-shadow:0 1px 4px rgba(173,216,230 , 0.2), 0 0 40px rgba(173,216,230 ,0.2)
+  box-shadow:0 1px 4px rgba(173,216,230 , 0.2), 0 0 10px rgba(173,216,230 ,0.2)
   inset;
   min-height: 400px;
   transition: transform .5s;
+  border-radius: .1875rem;
 
 }
 
 .hat:hover {
 
 transform: scale(1.07);
-box-shadow:0 1px 4px rgba(173,216,230 , 0.8), 0 0 40px rgba(173,216,230 ,0.8)
+box-shadow:0 1px 4px rgba(173,216,230 , 0.8), 0 0 10px rgba(173,216,230 ,0.8)
 
 
 }
@@ -439,7 +467,7 @@ color:white;
   left: 250px;
   position: absolute;
   height: 1px;
-  width: 450px;
+  min-width: 450px;
   border-bottom: 2px solid black;
 
 }
@@ -476,18 +504,19 @@ color:white;
   float:left;
   width: 30%;
   background: white;
-  box-shadow:0 1px 4px rgba(173,216,230 , 0.2), 0 0 40px rgba(173,216,230 ,0.3)inset;
+  box-shadow:0 1px 4px rgba(173,216,230 , 0.2), 0 0 10px rgba(173,216,230 ,0.3)inset;
   min-width: 30%;
   padding: 20px;
   color:#2d3e50;
+  border-radius: .1875rem;
   transition: transform .5s;
 
-} 
+}
 
 .boxes:hover {
 
 transform: scale(1.07);
-box-shadow:0 1px 4px rgba(173,216,230 , 0.8), 0 0 40px rgba(173,216,230 ,0.8)inset;
+box-shadow:0 1px 4px rgba(173,216,230 , 0.8), 0 0 10px rgba(173,216,230 ,0.8)inset;
 
 }
 
